-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.6.1
-
None
-
Windows 7
-
15fd9597f8254fb331af2f6b878070e2152d35f8
I'm using QTCreator with a custom build configuration on Windows. Essentially a make process is triggered that is using gcc. Everything is based on relative paths, the Compiler-Dir, the Makefiles and of course the sources.
The "Custom Parser Settings" are configured using the test line but the errors from the console are not parsed into qt creator.
It seems that this was already discussed in this thread https://forum.qt.io/topic/88415/custom-error-parsing-problem .
Could you please support relative file paths. Maybe you could rely on
- "Sysroot" of the configured "Kit" or
- Build directory %{buildDir}
as the root directory but do it how you wish.
An example for my output would be
COMPILE ../src/ARM_CM7/ADC.c ../src/ARM_CM7/ADC.c: In function 'ADC_Init': ../src/ARM_CM7/ADC.c:41:1: error: expected ';' before '}' token } ^ make[1]: *** [../output/ARM_CM7/temp/ADC.o] Error 1
For Gerrit Dashboard: QTCREATORBUG-20605 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
232281,8 | CustomParser: Improve relative file path resolving | master | qt-creator/qt-creator | Status: MERGED | -2 | 0 |