CustomParser: Improve relative file path resolving

By building an absolute path from the relative path,
relating from the build directory.

Task-number: QTCREATORBUG-20605
Change-Id: If76578d2ee01567a9c72f3fc63a773ea2901a545
Reviewed-by: Orgad Shaneh <orgads@gmail.com>